# dubbo-rust

./: Cargo.toml
common/base/: Cargo.toml
dubbo/: Cargo.toml
dubbo-macro/: Cargo.toml
dubbo-macro/src/: common.rs  lib.rs  reference_meta_info.rs  reference_service.rs  rpc_call.rs
dubbo-macro/tests/: lib.rs
dubbo/src/: framework.rs  lib.rs  param.rs  url.rs
dubbo/src/cluster/: default_cluster_extension.rs  directory.rs  mod.rs  n_cluster.rs
dubbo/src/common/url/: mod.rs
dubbo/src/common/url/params/: cluster_params.rs  extension_params.rs  invoke_params.rs  invoker_direcotry_params.rs  invoker_params.rs  load_balancer_params.rs  mod.rs  property_source_params.rs  protocol_params.rs  registry_params.rs  router_params.rs
dubbo/src/config/: application_config.rs  argument_config.rs  cluster_config.rs  dubbo_config.rs  invoker_directory_config.rs  load_balancer_config.rs  method_config.rs  mod.rs  property_source_config.rs  reference_config.rs  registry_config.rs  route_config.rs
dubbo/src/directory/: dynamic_directory.rs  dynamic_invoker_directory.rs  dynamic_invoker_directory_extension.rs  mod.rs  n_invoker_directory.rs  static_directory.rs
dubbo/src/extension/: cluster_extension.rs  directory_extension.rs  invoker_directory_extension.rs  invoker_extension.rs  load_balance_extension.rs  loadbalancer_extension.rs  mod.rs  property_source_extension.rs  protocol_extension.rs  registry_extension.rs  route_extension.rs  router_extension.rs
dubbo/src/framework/: boot.rs  mod.rs
dubbo/src/inv/: cloneable_invoker.rs  mod.rs
dubbo/src/invoker/: cloneable_invoker.rs  mod.rs
dubbo/src/loadbalancer/: mod.rs  n_load_balancer.rs
dubbo/src/params/: cluster_params.rs  extension_param.rs  extension_params.rs  invoke_param.rs  invoke_params.rs  invoker_direcotry_params.rs  invoker_params.rs  load_balancer_params.rs  mod.rs  protocol_params.rs  registry_params.rs  router_params.rs
dubbo/src/property_source/: application_property_source_extension.rs  mod.rs
dubbo/src/protocol/: mod.rs  registry_protocol_extension.rs  registry_protocol_invoker.rs
dubbo/src/protocol/triple/: triple_invoker.rs  triple_protocol.rs
dubbo/src/registry/: memory_registry.rs  mod.rs  n_registry.rs  nacos_registry_extension.rs  protocol.rs  registry.rs
dubbo/src/route/: mod.rs  n_route.rs
dubbo/src/serialize/: mod.rs
dubbo/src/triple/client/: builder.rs
dubbo/src/triple/server/: builder.rs
examples/greeter/: Cargo.toml
extension/: Cargo.toml
extension-loader/: Cargo.toml
extension-loader/lib/: libnacos_extension.dylib
extension-loader/src/: lib.rs
extension/src/: lib.rs
nacos-extension/: Cargo.toml
(+11 files in other folders)
