[workspace]
resolver = "2"
members = [
  "common/base",
  "dubbo",
]


[workspace.dependencies]
pin-project = "1"
tokio = "1"
tower = "0.4"
tokio-stream = "0.1"
tokio-util = "0.7"
async-trait = "0.1"
dashmap = "5"
futures = "0.3"
dubbo-base = {path="./common/base"}
thiserror = "1.0.30"
dubbo = { path = "./dubbo/" }
bytes = "1.0"
url = "2.5.0"
once_cell = "1"



