[workspace]
resolver = "2"
members = [
  "common/base",
  "dubbo",
]


[workspace.dependencies]
pin-project = "1"
tokio = "1"
async-trait = "0.1"
futures = "0.3"
thiserror = "1.0.30"
bytes = "1.0"
url = "2.5.0"
once_cell = "1"
tracing = "0.1"
rand = "0.8.5"
nacos-sdk = "0.3"
serde = "1"
serde_json = "1"
prost = "0.12"
async-stream = "0.3"
dubbo = { path = "./dubbo/" }
dubbo-base = {path="./common/base"}

