[package]
name = "dubbo"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo"
documentation = "https://github.com/apache/dubbo-rust"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower = { workspace = true, features = ["full"] }
tokio = { workspace = true, features = [ "rt-multi-thread", "time", "fs", "macros", "net", "signal",  "full" ] }
tokio-util.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
bytes.workspace = true
pin-project.workspace = true
futures.workspace = true
thiserror.workspace = true
url.workspace = true
tracing.workspace = true
once_cell.workspace = true