[package]
name = "dubbo"
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"
description = "dubbo"
documentation = "https://github.com/apache/dubbo-rust"
repository = "https://github.com/apache/dubbo-rust.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
tokio = { workspace = true, features = [ "full" ] }
async-trait.workspace = true
bytes.workspace = true
dubbo-base.workspace = true
once_cell.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true
nacos-sdk = {workspace = true, features = [ "async"]}